gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: electricsql-gateway
spec:
  gatewayClassName: datum-external-global-proxy
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: Same
  # - protocol: HTTPS
  #   port: 443
  #   name: https
  #   allowedRoutes:
  #     namespaces:
  #       from: Same
  #   tls:
  #     mode: Terminate
  #     options:
  #       gateway.networking.datumapis.com/certificate-issuer: auto
