gateway/routes-electricsql.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: electricsql-route
spec:
  parentRefs:
    - name: electricsql-gateway
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /electricsql
      timeouts:
        request: 25s
        backendRequest: 25s
      backendRefs:
        - group: discovery.k8s.io
          kind: EndpointSlice
          name: electricsql-endpoint
          port: 3000
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      #filters:
      #  - type: CORS
      #    cors:
      #      allowHeaders:
      #      - "*"
