gateway/routes-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  parentRefs:
  - name: electricsql-gateway
    kind: Gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      timeouts:
        request: 25s
        backendRequest: 25s
      backendRefs:
      - group: discovery.k8s.io
        kind: EndpointSlice
        name: frontend-endpoint
        port: 3000
#      filters:
#        - type: URLRewrite
#          urlRewrite:
#            path:
#              type: ReplacePrefixMatch
#              replacePrefixMatch: /
